# tosa

./: .prettierrc.json  README.md  index.html  package.json  pnpm-lock.yaml
src/: Configuration.ts  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  config.rs  event_handle.rs  global.rs  hotkey.rs  main.rs  tray.rs
src/Background/: BaseBackground.ts  index.ts
src/Plugins/Translator/: index.ts
src/ScreenCapture/: App.vue
src/Setting/: App.vue  General.vue
src/Translator/: App.vue  HeaderView.vue  SourceView.vue  Store.ts  TargetView.vue
src/components/: IconBtn.vue
