[package]
name = "tosa"
version = "0.1.0"
description = "OCR"
authors = [""]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.79.0"

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
paddleocr = "0.4.1"
window-shadows = "0.2.2"
tauri = { version = "1.8.0", features = [
	"dialog-all",
	"clipboard-all",
	"os-all",
	"notification-all",
	"shell-all",
	"fs-all",
	"http-all",
	"path-all",
	"window-all",
	"devtools",
	"global-shortcut-all",
	"reqwest-client",
	"system-tray",
] }
tauri-plugin-context-menu = "0.8.0"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-positioner = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
screenshots = "0.7.3"
dirs = "5.0.1"
once_cell = "1.19.0"
log = "0.4.20"
mouse_position = "0.1.3"
image = "0.25.2"
base64 = "0.22.1"
lazy_static = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58.0", features = [
	"Win32_UI_WindowsAndMessaging",
	"Win32_Foundation",
	"Win32_System_Threading",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_System_DataExchange",
	"Win32_UI_Accessibility",
	"Win32_System_Com",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
